package com.bridge;

/**
 * 类的实现层次结构。
 *
 * @author hf huminxi2017@gmail.com
 * @version on 2018/12/24 09:48
 */
public abstract class DisplayImpl {
    public abstract void rawOpen();

    public abstract void rawPrint();

    public abstract void rawClose();
}
